--- a/MiMedicacion/src/main/webapp/index.html
+++ b/MiMedicacion/src/main/webapp/index.html
@@ -5,6 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1>MiMedicacion</h1>
+        <a>https://github.com/Mbg999/MiMedicacion</a>
     </body>
 </html>
