--- a/MiMedicacion/src/main/webapp/index.html
+++ b/MiMedicacion/src/main/webapp/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>MiMedicacion</h1>
-        <a>https://github.com/Mbg999/MiMedicacion</a>
+        <a href="https://github.com/Mbg999/MiMedicacion">https://github.com/Mbg999/MiMedicacion</a>
     </body>
 </html>
